objects/ssot__CareProgramSite__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActualFirstPtcpEnrollmentDate__c</fullName>
        <label>Actual First Ptcp Enrollment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ActualFirstPtcpFirstVisitDate__c</fullName>
        <label>Actual First Ptcp First Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ActualFirstPtcpLastVisitDate__c</fullName>
        <label>Actual First Ptcp Last Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ActualLastPtcpEnrollmentDate__c</fullName>
        <label>Actual Last Ptcp Enrollment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ActualLastPtcpFirstVisitDate__c</fullName>
        <label>Actual Last Ptcp First Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ActualLastPtcpLastVisitDate__c</fullName>
        <label>Actual Last Ptcp Last Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ActualPtcpEnrollmentCount__c</fullName>
        <label>Actual Participant Enrollment Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ActualPtcpEnrollmentDrtnNumber__c</fullName>
        <label>Actual Participant Enrollment Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ActualPtcpEnrollmentRate__c</fullName>
        <label>Actual Participant Enrollment Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CareProgramId__c</fullName>
        <label>Care Program</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareProgramSite_TeamId_map_Team_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareProgramSite_TeamId_map_Team_Id_N_1</label>
        <referenceTo>ssot__Team__dlm</referenceTo>
        <relationshipLabel>CareProgramSite_TeamId_map_Team_Id_N_1</relationshipLabel>
        <relationshipName>CareProgramSite_TeamId_map_Team_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ForecastedFirstPtcpEnrollmentDate__c</fullName>
        <label>Forecasted First Ptcp Enrollment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ForecastedFirstPtcpFirstVisitDate__c</fullName>
        <label>Forecasted First Ptcp First Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ForecastedFirstPtcpLastVisitDate__c</fullName>
        <label>Forecasted First Ptcp Last Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ForecastedLastPtcpEnrollmentDate__c</fullName>
        <label>Forecasted Last Ptcp Enrollment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ForecastedLastPtcpFirstVisitDate__c</fullName>
        <label>Forecasted Last Ptcp First Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ForecastedLastPtcpLastVisitDate__c</fullName>
        <label>Forecasted Last Ptcp Last Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Care Program Site Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InvestigatorId__c</fullName>
        <label>Investigator</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InvtglProductReleaseDrtnNumber__c</fullName>
        <label>Investigational Product Release Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PlannedPtcpEnrollmentRate__c</fullName>
        <label>Planned Participant Enrollment Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PredictedPtcpEnrollmentRate__c</fullName>
        <label>Predicted Participant Enrollment Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ProjectedPtcpEnrlCount__c</fullName>
        <label>Projected Participant Enrollment Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ProjectedPtcpEnrlDrtnNumber__c</fullName>
        <label>Projected Ptcp Enrollment Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ProtocolDeviationCount__c</fullName>
        <label>Protocol Deviation Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__QualVisitToInitVisitDrtnNumber__c</fullName>
        <label>Qual Visit To Initiation Visit Drtn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RandomizedParticipantCount__c</fullName>
        <label>Randomized Participant Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RegulatoryDocTurnaroundDrtnNumber__c</fullName>
        <label>Regulatory Document Turnaround Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ResearchStudyAgreeSignedDate__c</fullName>
        <label>Research Study Agreement Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ResearchStudyAgreeTrnarndDrtnNumber__c</fullName>
        <label>Research Study Agree Turnaround Drtn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RsrchStudyCmplPtcpCount__c</fullName>
        <label>Research Study Completed Ptcp Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ScreenedParticipantCount__c</fullName>
        <label>Screened Participant Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SeriousAdverseEventCount__c</fullName>
        <label>Serious Adverse Event Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SiteActivationDate__c</fullName>
        <label>Site Activated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__SiteActvToFirstPtcpDrtnNumber__c</fullName>
        <label>Site Activation To First Ptcp Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SiteActvToLastPtcpDrtnNumber__c</fullName>
        <label>Site Activation To Last Ptcp Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SiteCloseOutDate__c</fullName>
        <label>Site Closed Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__SiteId__c</fullName>
        <label>Site</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SiteIdentifiedDate__c</fullName>
        <label>Site Identified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__SiteObject__c</fullName>
        <label>Site Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SponsorRepresentativeId__c</fullName>
        <label>Sponsor Representative</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TeamId__c</fullName>
        <label>Team</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UnitOfMeasureId__c</fullName>
        <label>Unit Of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726246771_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareProgramSite_CareProgramId_map_Ca_rel</label>
        <referenceTo>ssot__CareProgram__dlm</referenceTo>
        <relationshipLabel>CareProgramSite_CareProgramId_map_Ca_rel</relationshipLabel>
        <relationshipName>rel_1716726246771_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1723127948009_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareProgramSite_SiteId_map_Healthcar_rel</label>
        <referenceTo>ssot__HealthcareFacility__dlm</referenceTo>
        <relationshipLabel>CareProgramSite_SiteId_map_Healthcar_rel</relationshipLabel>
        <relationshipName>rel_1723127948009_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1723128536922_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareProgramSite_SiteId_map_Location__rel</label>
        <referenceTo>ssot__Location__dlm</referenceTo>
        <relationshipLabel>CareProgramSite_SiteId_map_Location__rel</relationshipLabel>
        <relationshipName>rel_1723128536922_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>